# stitch

./: Cargo.toml  LICENSE  README.md
resources/template/: main.prs
src/: commands.rs  lib.rs  main.rs  resourses.rs
src/compilation/: compiler.rs  conjunction.rs  datatype.rs  environment.rs  errors.rs  evaluation.rs  expression.rs  intepreter.rs  intermediate.rs  mod.rs  operator.rs  parser.rs  phrase.rs  precedent.rs  prefix.rs  primitive.rs  routine.rs  scanner.rs  source.rs  statement.rs  substantive.rs  token.rs  variable.rs  verb.rs
src/compilation/std/: io.rs  mod.rs
src/projects/: config.rs  mod.rs  project.rs
src/utils/: hasher.rs  map_ok.rs  mod.rs
