[package]
name = "stitch"
version = "0.1.0"
authors = ["Ruffz <m.asyraf.ibr@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive", "rc"] }
sha2 = "0.10.8"
toml = "0.8.19"
walkdir = "2.5.0"
